--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>ICDS Website - Angular JS</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span
@@ -240,7 +240,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Ecommers Web - React JS</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span
@@ -252,7 +252,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Face Detection - Javascript</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span
@@ -264,7 +264,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2d Rain - Html Css Javascript Canvas</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span
@@ -276,7 +276,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Todo App - MEAN</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
@@ -288,7 +288,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>CRUD Table - Html Css Javascript</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
@@ -385,7 +385,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
+                    <img class="img-res" src="assets/img/Portfolio-1.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">ICDS Website - Angular JS</h4>
@@ -408,7 +408,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+                    <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Ecommers Web - React JS</h4>
@@ -431,7 +431,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+                    <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Face Detection - Javascript</h4>
@@ -454,7 +454,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-4.jpg" alt="">
+                    <img class="img-res" src="assets/img/Portfolio-4.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">2d Rain - Html Css Javascript Canvas</h4>
@@ -478,7 +478,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
+                    <img class="img-res" src="assets/img/Portfolio-5.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Todo App - MEAN</h4>
@@ -501,7 +501,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+                    <img class="img-res" src="assets/img/Portfolio-6.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">CRUD Table - Html Css Javascript</h4>
