--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                         <p>As, Aslam-o-Alikum ! My name is Muhammad Moiz Siddique, i'm a full stack Javascript
                             Developer. I have been working with javascript for more than 3 years, i am have learned its
                             framework and libraries with my full consern and currently working on Angular JS. </p>
-                        <!-- <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf"
-                            class="btn btn-fill" target="_blank" download>Download my cv</a> -->
+                        <a href="assets/CV/Muhammad Moiz Siddique.pdf" class="btn btn-fill" target="blank"
+                            download>Download my cv</a>
                     </div>
                 </div>
             </div>
