--- a/index.html
+++ b/index.html
@@ -113,9 +113,12 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>As, Aslam-o-Alikum ! My name is Muhammad Moiz Siddique, i'm a full stack Javascript
-                            Developer. I have been working with javascript for more than 3 years, i am have learned its
-                            framework and libraries with my full consern and currently working on Angular JS. </p>
+                        <p>As, Aslam-o-Alikum ! My name is Muhammad Moiz Siddique, A Full Stack Javascript Developer, 
+                            a quick learner and problem solver, and thrives to keep learning and improving not only personal but interpersonal skills as well. 
+                            I'm also an effective communicator who has experience dealing with a team of developers, project managers, and stakeholders including 
+                            mentoring junior developers and cohesive problem solving with the team. Also, I have experience with some well known Javascript frameworks like 
+                            React Js, Stencil Js, vue Js, electron JS and Currently i'm working on Angular JS for more than one year.
+                            </p>
                         <a href="assets/CV/Muhammad Moiz Siddique.pdf" class="btn btn-fill" target="blank"
                             download>Download my cv</a>
                     </div>
