--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="col-md-10 col-md-offset-1">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p style="text-align: justify;">As, Aslam-o-Alikum ! My name is Muhammad Moiz Siddique, A Full Stack Javascript Developer, 
+                        <p style="text-align: center;">As, Aslam-o-Alikum ! My name is Muhammad Moiz Siddique, A Full Stack Javascript Developer, 
                             a quick learner and problem solver, and thrives to keep learning and improving not only personal but interpersonal skills as well. 
                             I'm also an effective communicator who has experience dealing with a team of developers, project managers, and stakeholders including 
                             mentoring junior developers and cohesive problem solving with the team. Also, I have experience with some well known Javascript frameworks like 
