--- a/index.html
+++ b/index.html
@@ -113,12 +113,15 @@
                     <div class="col-md-10 col-md-offset-1">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p style="text-align: center;">As, Aslam-o-Alikum ! My name is Muhammad Moiz Siddique, A Full Stack Javascript Developer, 
-                            a quick learner and problem solver, and thrives to keep learning and improving not only personal but interpersonal skills as well. 
-                            I'm also an effective communicator who has experience dealing with a team of developers, project managers, and stakeholders including 
-                            mentoring junior developers and cohesive problem solving with the team. Also, I have experience with some well known Javascript frameworks like 
-                            React Js, Stencil Js, vue Js, electron JS and Currently i'm working on Angular JS for more than one year.
-                            </p>
+                        <p style="text-align: center;">
+                            As, Aslam-o-Alikum! My name is Muhammad Moiz Siddique, A Full Stack JavaScript Developer, a
+                            quick learner and problem solver, and thrives to keep learning and improving not only
+                            personal but interpersonal skills as well. I'm also an effective communicator who has
+                            experience dealing with a team of developers, project managers, and stakeholders including
+                            mentoring junior developers and cohesive problem solving with the team. Also, I have
+                            experience with some well-known JavaScript frameworks like React JS, Stencil JS, Vue JS,
+                            electron JS and Currently I’m working on Angular JS for more than one year.
+                        </p>
                         <a href="assets/CV/Muhammad Moiz Siddique.pdf" class="btn btn-fill" target="blank"
                             download>Download my cv</a>
                     </div>
@@ -204,9 +207,10 @@
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
                             <h4>Back-end</h4>
-                            <p>Utilising Mongo DB, Php frameworks such as Zend, Firebase and others, I've written
-                                services
-                                supporting thousands of users, including REST APIs, e-learning applications and more.
+                            <p>
+                                Utilizing Mongo DB, Php frameworks such as Zend, Firebase and others, I've written
+                                services supporting thousands of users, including REST APIs, e-learning applications and
+                                more.
                             </p>
                         </div><!-- /.service -->
                     </div>
