--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             experience dealing with a team of developers, project managers, and stakeholders including
                             mentoring junior developers and cohesive problem solving with the team. Also, I have
                             experience with some well-known JavaScript frameworks like React JS, Stencil JS, Vue JS,
-                            electron JS and Currently I’m working on Angular JS for more than one year.
+                            electron JS and Currently I’m working on Angular JS for more than one year. <a href="https://www.hackerrank.com/JerryMMoiz2000">hackerrank profile</a>
                         </p>
                         <a href="assets/CV/Muhammad Moiz Siddique.pdf" class="btn btn-fill" target="blank"
                             download>Download my cv</a>
