--- a/index.html
+++ b/index.html
@@ -2,93 +2,70 @@
 <html lang="en">
 
 <head>
-
     <!-- Basic Page Needs
     ================================================== -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <title>Muhammad Moiz Siddique - Portfolio</title>
-
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="">
-
     <!-- Mobile Specific Metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-
     <!-- Favicon
     ================================================== -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
-
     <!-- Stylesheets
     ================================================== -->
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
     <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
-
 </head>
 
 <body>
-
     <header id="masthead" class="site-header" data-anchor-target=".hero" data-top="background: rgba(255,255,255,0); padding: 30px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0);" data-top-bottom="background: rgba(255,255,255,1); padding: 10px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.2);">
         <nav id="primary-navigation" class="site-navigation">
             <div class="container">
                 <div class="navbar-header page-scroll">
-
                     <button type="button" class="navbar-toggle collapsed" data-target="#portfolio-perfect-collapse" aria-expanded="false">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-
                     <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
-
                 </div>
                 <!-- /.navbar-header -->
-
                 <div class="main-menu" id="portfolio-perfect-collapse">
-
                     <ul class="nav navbar-nav navbar-right">
-
                         <li class="page-scroll"><a href="#hero">Home</a></li>
                         <li class="page-scroll"><a href="#about">About</a></li>
                         <li class="page-scroll"><a href="#service">Service</a></li>
                         <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="page-scroll"><a href="#contact">Contact</a></li>
-
                     </ul>
                     <!-- /.navbar-nav -->
-
                 </div>
                 <!-- /.navbar-collapse -->
-
             </div>
         </nav>
         <!-- /.primary-navigation -->
     </header>
     <!-- /#header -->
-
     <div id="hero" class="hero">
         <div class="container">
             <div class="row">
-
                 <div class="col-md-6">
                     <h1>Muhammad Moiz Siddique</h1>
                     <div class="page-scroll">
@@ -98,32 +75,27 @@
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
                     </div>
                 </div>
-
                 <div class="col-md-6 text-right persnal-image">
                     <img src="assets/img/moiz.png" alt="Muhammad Moiz Siddique">
                 </div>
-
             </div>
         </div>
     </div>
     <!-- /.hero -->
-
     <main id="main" class="site-main">
-
         <section id="about" class="site-section section-about text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p style="text-align: center;">
-                            As, Aslam-o-Alikum! My name is Muhammad Moiz Siddique, A Full Stack JavaScript Developer, a quick learner and problem solver, and thrives to keep learning and improving not only personal but interpersonal skills as well. I'm also an effective communicator
-                            who has experience dealing with a team of developers, project managers, and stakeholders including mentoring junior developers and cohesive problem solving with the team. Also, I have experience with some well-known JavaScript
-                            frameworks like React JS, Stencil JS, Vue JS, electron JS and Currently I’m working on Angular JS for more than one year. <a href="https://www.hackerrank.com/JerryMMoiz2000">hackerrank profile</a>
+                        <p style="text-align: center;"> As, Aslam-o-Alikum! My name is Muhammad Moiz Siddique, A Full Stack JavaScript Developer, a quick learner and problem solver, and thrives to keep learning and improving not only personal but interpersonal skills as well. I'm also
+                            an effective communicator who has experience dealing with a team of developers, project managers, and stakeholders including mentoring junior developers and cohesive problem solving with the team. Also, I have experience with
+                            some well-known JavaScript frameworks like React JS, Stencil JS, Vue JS, electron JS and Currently I’m working on Angular JS for more than one year. <a href="https://www.hackerrank.com/JerryMMoiz2000">hackerrank profile</a>
                         </p>
-                        <div class="cv_download_container">
-                            <span class="cv_text">Download My CV </span>
-                            <div class="cv_butoon_container">
+                        <div style="display: flex; flex: 1; flex-direction: column; justify-content: center; align-items: center; gap: 30px;">
+                            <span style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Download My CV </span>
+                            <div style="display: flex; flex: 1; justify-content: center; align-items: center; gap: 20px;">
                                 <a href="assets/CV/standard/Muhammad Moiz Siddique.pdf" class="btn btn-fill" target="blank" download>Standard</a>
                                 <a href="assets/CV/europass/Muhammad Moiz Siddique.pdf" class="btn btn-fill" target="blank" download>Europass</a>
                             </div>
@@ -133,7 +105,6 @@
             </div>
         </section>
         <!-- /.secton-about -->
-
         <section class="site-section section-skills">
             <div class="container">
                 <div class="text-center">
@@ -205,7 +176,6 @@
             </div>
         </section>
         <!-- /.secton-skills -->
-
         <section id="service" class="site-section section-services overlay text-center">
             <div class="container">
                 <div class="row">
@@ -225,9 +195,7 @@
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
                             <h4>Back-end</h4>
-                            <p>
-                                Utilizing Mongo DB, Php frameworks such as Zend, Firebase and others, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.
-                            </p>
+                            <p> Utilizing Mongo DB, Php frameworks such as Zend, Firebase and others, I've written services supporting thousands of users, including REST APIs, e-learning applications and more. </p>
                         </div>
                         <!-- /.service -->
                     </div>
@@ -243,7 +211,6 @@
             </div>
         </section>
         <!-- /.secton-services -->
-
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
@@ -337,7 +304,6 @@
             </div>
         </section>
         <!-- /.secton-portfolio -->
-
         <section class="site-section section-counters text-center">
             <div class="container">
                 <div class="row">
@@ -357,10 +323,8 @@
             </div>
         </section>
         <!-- /.section-counters -->
-
         <section id="contact" class="site-section section-form text-center">
             <div class="container">
-
                 <h3>Contact</h3>
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 <form>
@@ -381,10 +345,8 @@
             </div>
         </section>
         <!-- /.section-form -->
-
     </main>
     <!-- /#main -->
-
     <footer id="colophon" class="site-footer">
         <div class="container">
             <div class="row">
@@ -396,8 +358,7 @@
                     <a class="icon" href="https://twitter.com/MuhammadMoizSi1?s=09" target="blank"> <i class="fa fa-twitter"></i> </a>
                 </div>
                 <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
-                    <p class="copyright">
-                        &copy;
+                    <p class="copyright"> &copy;
                         <script>
                             document.write(new Date().getFullYear());
                         </script>. All Rights Reserved
@@ -412,7 +373,6 @@
         </div>
     </footer>
     <!-- /#footer -->
-
     <!-- Modals -->
     <div id="portfolioItem1" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -436,7 +396,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <div id="portfolioItem2" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -459,7 +418,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <div id="portfolioItem3" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -482,7 +440,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <div id="portfolioItem4" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -505,7 +462,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <div id="portfolioItem5" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -528,7 +484,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <div id="portfolioItem6" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -551,7 +506,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -564,7 +518,6 @@
     <script src="assets/js/jquery.countTo.min.js"></script>
     <script src="assets/js/stmp.js"></script>
     <script src="assets/js/script.js"></script>
-
 </body>
 
 </html>
