--- a/index.html
+++ b/index.html
@@ -205,8 +205,10 @@
                         <div class="service">
                             <img src="assets/img/front-end.svg" alt="Front End Developer">
                             <h4>Front-end</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with
-                                jQuery or more advanced javascript MVC frameworks such as angular</p>
+                            <p>I'm experienced with modern Javascript and Typescript Frameworks and Libraries such as 
+                                React JS, Angular, Next JS, React Native, Native Script and Ionic. I've developed various
+                                applictions like CMS, Social Networking Site, Fintech, Data modeling sites and much more. Also,
+                                I'll help you in application designing.</p>
                         </div>
                         <!-- /.service -->
                     </div>
@@ -214,9 +216,11 @@
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
                             <h4>Back-end</h4>
-                            <p> Utilizing Mongo DB, Php frameworks such as Zend, Firebase and others, I've written
+                            <p>I've good command on backend side with modern and in-use technologies such as Node Js 
+                                (Javascrip/Typescript), Nest Js, Django, PHP, Ruby on Rails, Go Lang and others. I've written
                                 services supporting thousands of users, including REST APIs, e-learning applications and
-                                more. </p>
+                                working different architectures like microservices.</p>
+                            
                         </div>
                         <!-- /.service -->
                     </div>
@@ -225,7 +229,9 @@
                             <img src="assets/img/consultancy.svg" alt="Coding">
                             <h4>Consultancy</h4>
                             <p>As well as providing development services, I can also help you decide strategic roadmaps
-                                via consultancy services.</p>
+                                via consultancy services. Also, help you in building more creative ideas that you wanted 
+                                to make your application stand outside from the crowd. I'll give the maintance services as 
+                                well for free for a limited amount of time.</p>
                         </div>
                         <!-- /.service -->
                     </div>
@@ -332,12 +338,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="3" data-speed="2000">0</p>
+                        <p class="counter start" data-to="5" data-speed="2000">0</p>
                         <h4>Years Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="32" data-speed="2000">0</p>
-                        <h4>Projects Delivered</h4>
+                        <p class="counter start" data-to="67" data-speed="2000">0</p>
+                        <h4>Projects Completed</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
